<resources>
    <string name="app_name">MobileClient</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter">Войти</string>
    <string name="authorization_text_1">Введите номер телефона, чтобы войти или зарегистрироваться</string>
    <string name="authorization_text_2">Номер телефона</string>
    <string name="number_phone">+79967003444</string>
    <string name="user_agreement">Нажимая кнопку «Далее», вы соглашаетесь с условивыи Пользовательского сослашения и с обработкой вашей персональной информации на условинх Политики конфиденщиальности.</string>
    <string name="further">Далее</string>
    <string name="phone_confirmation">Подтверждение телефона</string>
    <string name="confirmation_phone_text_1">Введите код из СМС отправленного на номер %s</string>
    <string name="code_stars">****</string>
    <string name="confirmation_phone_text_2">Отправить код ещё раз</string>
    <string name="error">Ошибка, возможно проблема частых запросов </string>
    <string name="invalid_code">Неверный код подтверждения</string>
    <string name="expand">Развернуть</string>
    <string name="by_with_cashback">Купить с кешбэком</string>
    <string name="search_stores_products">Поиск магазинов, товаров</string>
    <string name="problems_with_Internet">Проблемы с интернетом, повторите попытку позже</string>
    <string name="text_test_1">Мобильный телефон Apple iPhone 12 64GB A2403 green (зеленый)</string>
    <string name="text_view_2">999,00 RUB</string>
    <string name="text_vew_3">Кешбэк</string>
    <string name="text_view_4">до 20,00%</string>
    <string name="text_view_5">Время начисления кэшбека</string>
    <string name="text_view_6">от 56 до 65 дней</string>
    <string name="text_view_7">от 56 до 65 дней</string>
    <string name="text_view_8">John Smith</string>
    <string name="text_view_9">до 12,00%</string>
    <string name="text_view_10">до 12,00%</string>
    <string name="text_view_12">Условия</string>
    <string name="percent_text_view">62,30%</string>
</resources>