<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.AuthorizationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/enter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/enter"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@+id/guidelineLeft"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/authorization_text_1"
            android:textSize="20sp"
            app:layout_constrainedHeight="true"
            app:layout_constrainedWidth="true"
            app:layout_constraintLeft_toRightOf="@+id/guidelineLeft"
            app:layout_constraintRight_toLeftOf="@id/guidelineRight"
            app:layout_constraintTop_toBottomOf="@id/enter" />

        <TextView
            android:id="@+id/text_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/authorization_text_2"
            android:textSize="17sp"
            app:layout_constraintLeft_toRightOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@id/text_1" />

        <LinearLayout
            android:id="@+id/linerLay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/guidelineRight"
            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@id/text_2">

            <EditText
                android:id="@+id/input_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/number_phone"
                android:inputType="number|phone"
                android:selectAllOnFocus="true"
                android:stretchColumns="1" />
        </LinearLayout>
        <TextView
            android:id="@+id/text_error"
            android:visibility="gone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/error"
            android:textSize="17sp"
            android:textColor="@color/red"
            app:layout_constraintLeft_toRightOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@id/linerLay" />

        <Button
            android:id="@+id/button"
            style="@style/MyStyle.ButtonMain"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:text="@string/further"
            android:textAllCaps="false"
            android:textSize="17sp"
            app:layout_constraintEnd_toStartOf="@id/guidelineRight"
            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@id/linerLay" />

        <TextView
            android:id="@+id/text_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:lineSpacingExtra="3dp"
            android:text="@string/user_agreement"
            android:textSize="17sp"
            app:layout_constrainedHeight="true"
            app:layout_constrainedWidth="true"
            app:layout_constraintLeft_toRightOf="@+id/guidelineLeft"
            app:layout_constraintRight_toLeftOf="@id/guidelineRight"
            app:layout_constraintTop_toBottomOf="@+id/button" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>