<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ConfirmationPhoneFragment">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/enter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/phone_confirmation"
            app:layout_constrainedHeight="true"
            app:layout_constrainedWidth="true"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@+id/guidelineLeft"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/confirmation_phone_text_1"
            android:textSize="17sp"
            app:layout_constrainedHeight="true"
            app:layout_constrainedWidth="true"
            app:layout_constraintLeft_toRightOf="@+id/guidelineLeft"
            app:layout_constraintRight_toLeftOf="@id/guidelineRight"
            app:layout_constraintTop_toBottomOf="@id/enter" />

        <LinearLayout
            android:id="@+id/linerLay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/guidelineRight"
            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@id/text_2">

            <EditText
                android:id="@+id/input_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/code_stars"
                android:inputType="numberPassword"
                android:selectAllOnFocus="true"
                android:stretchColumns="1" />
        </LinearLayout>

        <TextView
            android:id="@+id/text_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:lineSpacingExtra="3dp"
            android:text="@string/confirmation_phone_text_2"
            android:textColor="@color/purple_700"
            android:textSize="17sp"
            app:layout_constrainedHeight="true"
            app:layout_constrainedWidth="true"
            app:layout_constraintLeft_toRightOf="@+id/guidelineLeft"
            app:layout_constraintRight_toLeftOf="@id/guidelineRight"
            app:layout_constraintTop_toBottomOf="@+id/linerLay" />

        <TextView
            android:id="@+id/text_error"
            android:visibility="gone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/invalid_code"
            android:textSize="17sp"
            android:layout_marginTop="3dp"
            android:textColor="@color/red"
            app:layout_constraintLeft_toRightOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@id/text_3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>